--- a/src/BooksBundle/Resources/views/Default/index.html.twig
+++ b/src/BooksBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,10 @@
-Hello World!
+{% extends 'base.html.twig' %}
+
+{% block body %}
+
+<center>
+	<h1>mBooks</h1>
+	<h3>Bienvenido a nuestro gestor de contabilidad.</h3>
+</center>
+
+{% endblock %}
