--- a/app/Resources/views/enterprise/new.html.twig
+++ b/app/Resources/views/enterprise/new.html.twig
@@ -1,16 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Enterprise creation</h1>
+    <h1>Nueva Empresa</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <br>
+        <input type="submit" class="btn btn-success btn-sm" value="Guardar" />
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('enterprise_index') }}">Back to the list</a>
-        </li>
-    </ul>
+    <a href="{{ path('enterprise_index') }}" class="btn btn-primary btn-sm">Back to the list</a>
+    
 {% endblock %}
