--- a/src/BooksBundle/Resources/views/Default/index.html.twig
+++ b/src/BooksBundle/Resources/views/Default/index.html.twig
@@ -5,6 +5,7 @@
 <center>
 	<h1>mBooks</h1>
 	<h3>Bienvenido a nuestro gestor de contabilidad.</h3>
+	{{setted_enterprise}}
 </center>
 
 {% endblock %}
