--- a/app/Resources/views/enterprise/edit.html.twig
+++ b/app/Resources/views/enterprise/edit.html.twig
@@ -1,21 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Enterprise edit</h1>
+    <h1>Editar</h1>
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
+        <br>
+        <input type="submit" class="btn btn-success btn-sm" value="Guardar" />
     {{ form_end(edit_form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('enterprise_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    <a href="{{ path('enterprise_index') }}" class="btn btn-primary btn-sm">Ver Empresas</a>
+    {{ form_start(delete_form) }}
+        <input type="submit" class="btn btn-danger btn-sm" value="Eliminar">
+    {{ form_end(delete_form) }}
+
 {% endblock %}
