--- a/app/Resources/views/enterprise/show.html.twig
+++ b/app/Resources/views/enterprise/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Enterprise</h1>
+    <h1>Empresa</h1>
 
     <table>
         <tbody>
@@ -10,23 +10,16 @@
                 <td>{{ enterprise.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Nombre</th>
                 <td>{{ enterprise.name }}</td>
             </tr>
         </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('enterprise_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('enterprise_edit', { 'id': enterprise.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    <a href="{{ path('enterprise_index') }}" class="btn btn-info btn-sm">Ver Empresas</a>
+    <a href="{{ path('enterprise_edit', { 'id': enterprise.id }) }}" class="btn btn-primary btn-sm">Editar</a>
+
+    {{ form_start(delete_form) }}
+        <input type="submit" class="btn btn-danger btn-sm" value="Borrar">
+    {{ form_end(delete_form) }}
 {% endblock %}
