--- a/app/Resources/views/accountl2/new.html.twig
+++ b/app/Resources/views/accountl2/new.html.twig
@@ -1,16 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Accountl2 creation</h1>
+    <h1>Nueva Cuenta N2</h1>
+
+    {{accountL1.name}}
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <br>
+        <input type="submit" class="btn btn-success btn-sm" value="Create" />
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('accountl2_index') }}">Back to the list</a>
-        </li>
-    </ul>
+    <a href="{{ path('accountl2_index') }}" class="btn btn-primary btn-sm">Ver cuentas</a>
+
 {% endblock %}
