--- a/app/Resources/views/accountl1/show.html.twig
+++ b/app/Resources/views/accountl1/show.html.twig
@@ -1,35 +1,35 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Accountl1</h1>
+    <h1>Cuenta Nivel 1</h1>
 
-    <table>
+    <table class="table" >
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ accountL1.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
+                <th>Nombre</th>
                 <td>{{ accountL1.name }}</td>
             </tr>
             <tr>
-                <th>Code</th>
+                <th>Código</th>
                 <td>{{ accountL1.code }}</td>
+            </tr>
+            <tr>
+                <th>Empresa</th>
+                <td>{{ accountL1.enterprise.name }}</td>
             </tr>
         </tbody>
     </table>
 
     <ul>
         <li>
-            <a href="{{ path('accountl1_index') }}">Back to the list</a>
+            <a href="{{ path('accountl1_index') }}">Cuentas</a>
         </li>
         <li>
-            <a href="{{ path('accountl1_edit', { 'id': accountL1.id }) }}">Edit</a>
+            <a href="{{ path('accountl1_edit', { 'id': accountL1.id }) }}">Editar</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
+                <input type="submit" value="Borrar">
             {{ form_end(delete_form) }}
         </li>
     </ul>
