--- a/app/Resources/views/accountl3/new.html.twig
+++ b/app/Resources/views/accountl3/new.html.twig
@@ -1,16 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Accountl3 creation</h1>
+    <h1>Nueva cuenta N3</h1>
+
+    {{accountL2.accountL1.name}} > {{accountL2.name}}
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <input type="submit" value="Crear" />
     {{ form_end(form) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('accountl3_index') }}">Back to the list</a>
-        </li>
-    </ul>
 {% endblock %}
