--- a/app/Resources/views/user/edit.html.twig
+++ b/app/Resources/views/user/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Editar Participante</h1>
+    <h1>Editar Usuario</h1>
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
