--- a/app/Resources/views/voucher/new.html.twig
+++ b/app/Resources/views/voucher/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Voucher creation</h1>
+    <h1>Ingresar Voucher</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <input type="submit" value="Crear" />
     {{ form_end(form) }}
 
     <ul>
@@ -13,4 +13,22 @@
             <a href="{{ path('voucher_index') }}">Back to the list</a>
         </li>
     </ul>
+
+    <script type="text/javascript">
+        window.onload = function() {
+
+            $(".js-basic-single").select2({
+                allowClear: false,
+                width: '100%'
+            });        
+        };
+    </script>
+
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2-rc.1/js/select2.min.js"></script>
+        
 {% endblock %}
