--- a/app/Resources/views/voucher/new.html.twig
+++ b/app/Resources/views/voucher/new.html.twig
@@ -4,7 +4,21 @@
     <h1>Ingresar Voucher</h1>
 
     {{ form_start(form) }}
-        {{ form_widget(form) }}
+        {{ form_label(form.state) }}
+        {{ form_widget(form.state) }}
+        {{ form_label(form.type) }}
+        {{ form_widget(form.type) }}
+        {{ form_label(form.number) }}
+        {{ form_widget(form.number) }}
+        {{ form_label(form.date) }}
+        {{ form_widget(form.date) }}
+        {{ form_label(form.items) }}
+        <ul class="items" data-prototype="{{ form_widget(form.items.vars.prototype)|e('html_attr') }}">
+            {# iterate over each existing tag and render its only field: name #}
+            {% for item in form.items %}
+                <li>{{ form_row(item.number) }}</li>
+            {% endfor %}
+        </ul>
         <input type="submit" value="Crear" />
     {{ form_end(form) }}
 
@@ -22,6 +36,79 @@
                 width: '100%'
             });        
         };
+        
+        var $collectionHolder;
+
+        // setup an "add a item" link
+        var $addItemLink = $('<a href="#" class="add_item_link">Add a item</a>');
+        var $newLinkLi = $('<li></li>').append($addItemLink);
+
+        jQuery(document).ready(function() {
+            // Get the ul that holds the collection of items
+            $collectionHolder = $('ul.items');
+
+            // add a delete link to all of the existing tag form li elements
+            $collectionHolder.find('li').each(function() {
+                addTagFormDeleteLink($(this));
+            });
+
+            // add the "add a item" anchor and li to the items ul
+            $collectionHolder.append($newLinkLi);
+
+            // count the current form inputs we have (e.g. 2), use that as the new
+            // index when inserting a new item (e.g. 2)
+            $collectionHolder.data('index', $collectionHolder.find(':input').length);
+
+            $addItemLink.on('click', function(e) {
+                // prevent the link from creating a "#" on the URL
+                e.preventDefault();
+
+                // add a new item form (see next code block)
+                addItemForm($collectionHolder, $newLinkLi);
+            });
+        });
+
+        function addItemForm($collectionHolder, $newLinkLi) 
+        {
+            // Get the data-prototype explained earlier
+            var prototype = $collectionHolder.data('prototype');
+
+            // get the new index
+            var index = $collectionHolder.data('index');
+
+            var newForm = prototype;
+            // You need this only if you didn't set 'label' => false in your items field in VoucherType
+            // Replace '__name__label__' in the prototype's HTML to
+            // instead be a number based on how many items we have
+            // newForm = newForm.replace(/__name__label__/g, index);
+
+            // Replace '__name__' in the prototype's HTML to
+            // instead be a number based on how many items we have
+            newForm = newForm.replace(/__name__/g, index);
+
+            // increase the index with one for the next item
+            $collectionHolder.data('index', index + 1);
+
+            // Display the form in the page in an li, before the "Add a item" link li
+            var $newFormLi = $('<li></li>').append(newForm);
+            $newLinkLi.before($newFormLi);
+
+            // add a delete link to the new form
+            addTagFormDeleteLink($newFormLi);
+        }
+
+        function addTagFormDeleteLink($tagFormLi) {
+            var $removeFormA = $('<a href="#">delete this tag</a>');
+            $tagFormLi.append($removeFormA);
+
+            $removeFormA.on('click', function(e) {
+                // prevent the link from creating a "#" on the URL
+                e.preventDefault();
+
+                // remove the li for the tag form
+                $tagFormLi.remove();
+            });
+        }
     </script>
 
 {% endblock %}
