--- a/app/Resources/views/voucher/edit.html.twig
+++ b/app/Resources/views/voucher/edit.html.twig
@@ -32,22 +32,7 @@
         <input type="submit" class="btn btn-danger" value="Eliminar">
     {{ form_end(delete_form) }}
 
-    <script type="text/javascript">
-        window.onload = function() {
-
-            $(".js-basic-single").select2({
-                allowClear: false,
-                width: '100%'
-            });        
-
-            styleForms();
-
-            //solo funciona si hay almenos un item
-            $('.head').css('width',parseInt($('[id^=booksbundle_voucher_items_]').css('width'),10)+5);
-            $('.head').css('text-align', 'center');
-            $('.head').parent().find('a').remove();
-        };
-        
+    <script type="text/javascript">        
         var $collectionHolder;
 
         // setup an "add a item" link
@@ -77,6 +62,26 @@
                 // add a new item form (see next code block)
                 addItemForm($collectionHolder, $newLinkLi);
             });
+
+            $(".js-basic-single").select2({
+                allowClear: false,
+                width: '100%'
+            });        
+
+            if($collectionHolder.find(':input').length == 0)
+            {
+                $addItemLink.trigger('click');
+                $('.head').css('width',parseInt($('#booksbundle_voucher_items_0_number').parent().css('width'),10)+5);
+            }
+            else
+            {
+                styleForms();
+                $('.head').css('width',parseInt($('[id^=booksbundle_voucher_items_]').parent().css('width'),10)+5);
+            }
+
+            $('.head').css('text-align', 'center');
+            $('.head').parent().find('a').remove();
+
         });
 
         function addItemForm($collectionHolder, $newLinkLi) 
