--- a/app/Resources/views/voucher/edit.html.twig
+++ b/app/Resources/views/voucher/edit.html.twig
@@ -13,18 +13,17 @@
         {{ form_label(edit_form.date) }}
         {{ form_widget(edit_form.date) }}
         {{ form_label(edit_form.items) }}
-        <ul class="items" data-prototype="{{ form_widget(edit_form.items.vars.prototype)|e('html_attr') }}">
+        <ol class="items" data-prototype="{{ form_widget(edit_form.items.vars.prototype)|e('html_attr') }}">
             <li style="display:inline-flex;">
-                <div class="head">Item</div>
                 <div class="head">Haber</div>
                 <div class="head">Debe</div>
                 <div class="head">Número Documento</div>
             </li>
             {# iterate over each existing tag and render its only field: name #}
             {% for item in edit_form.items %}
-                <li style="display:inline-flex;">{{ form_row(item.number) }}{{ form_row(item.credit) }}{{ form_row(item.debit) }}{{ form_row(item.documentNumber) }}</li>
+                <li>{{ form_row(item.credit) }}{{ form_row(item.debit) }}{{ form_row(item.documentNumber) }}</li>
             {% endfor %}
-        </ul>
+        </ol>
         <input type="submit" class="btn btn-success" value="Guardar" />
     {{ form_end(edit_form) }}
     
@@ -41,7 +40,7 @@
 
         jQuery(document).ready(function() {
             // Get the ul that holds the collection of items
-            $collectionHolder = $('ul.items');
+            $collectionHolder = $('ol.items');
 
             // add a delete link to all of the existing tag form li elements
             $collectionHolder.find('li').each(function() {
@@ -71,7 +70,8 @@
             if($collectionHolder.find(':input').length == 0)
             {
                 $addItemLink.trigger('click');
-                $('.head').css('width',parseInt($('#booksbundle_voucher_items_0_number').parent().css('width'),10)+5);
+                setTimeout(function() {}, 50);
+                $('.head').css('width',parseInt($('#booksbundle_voucher_items_0_credit').parent().css('width'),10)+5);
             }
             else
             {
@@ -106,7 +106,7 @@
             $collectionHolder.data('index', index + 1);
 
             // Display the form in the page in an li, before the "Add a item" link li
-            var $newFormLi = $('<li style="display:inline-flex;"></li>').append(newForm);
+            var $newFormLi = $('<li></li>').append(newForm);
             $newLinkLi.before($newFormLi);
 
             // add a delete link to the new form
@@ -130,9 +130,9 @@
 
         function styleForms()
         {
-            $('[id^=booksbundle_voucher_items_]').css('display','inline-flex');
             $('li').css('padding-bottom','5px')
-            $('[id^=booksbundle_voucher_items_]').parent().css('padding-right','5px');
+            //$('[id^=booksbundle_voucher_items_]').parent().css('padding-right','5px');
+            //$('[id^=booksbundle_voucher_items_]').parent().css('display','inline-block');
         }
 
     </script>
