--- a/app/Resources/views/voucher/new.html.twig
+++ b/app/Resources/views/voucher/new.html.twig
@@ -13,18 +13,17 @@
         {{ form_label(form.date) }}
         {{ form_widget(form.date) }}
         {{ form_label(form.items) }}
-        <ul class="items" data-prototype="{{ form_widget(form.items.vars.prototype)|e('html_attr') }}">
+        <ol class="items" data-prototype="{{ form_widget(form.items.vars.prototype)|e('html_attr') }}">
             <li style="display:inline-flex;">
-                <div class="head">Item</div>
                 <div class="head">Haber</div>
                 <div class="head">Debe</div>
                 <div class="head">Número Documento</div>
             </li>
             {# iterate over each existing tag and render its only field: name #}
             {% for item in form.items %}
-                <li style="display:inline-flex;">{{ form_row(item.number) }}{{ form_row(item.credit) }}{{ form_row(item.debit) }}{{ form_row(item.documentNumber) }}</li>
+                <li>{{ form_row(item.credit) }}{{ form_row(item.debit) }}{{ form_row(item.documentNumber) }}</li>
             {% endfor %}
-        </ul>
+        </ol>
         <input type="submit" class="btn btn-success" value="Crear" />
     {{ form_end(form) }}
 
@@ -40,7 +39,7 @@
 
         jQuery(document).ready(function() {
             // Get the ul that holds the collection of items
-            $collectionHolder = $('ul.items');
+            $collectionHolder = $('ol.items');
 
             // add a delete link to all of the existing tag form li elements
             $collectionHolder.find('li').each(function() {
@@ -70,7 +69,7 @@
             $addItemLink.trigger('click');
 
             //solo funciona si hay almenos un item
-            $('.head').css('width',parseInt($('#booksbundle_voucher_items_0_number').parent().css('width'),10)+5);
+            $('.head').css('width',parseInt($('#booksbundle_voucher_items_0_credit').parent().css('width'),10)+5);
             $('.head').css('text-align', 'center');
             $('.head').parent().find('a').remove();
         });
@@ -97,7 +96,7 @@
             $collectionHolder.data('index', index + 1);
 
             // Display the form in the page in an li, before the "Add a item" link li
-            var $newFormLi = $('<li style="display:inline-flex;"></li>').append(newForm);
+            var $newFormLi = $('<li></li>').append(newForm);
             $newLinkLi.before($newFormLi);
 
             // add a delete link to the new form
