--- a/web/css/main.css
+++ b/web/css/main.css
@@ -155,6 +155,13 @@ div#booksbundle_user_occupation label
   margin-right: 7px;
 }
 
+.items > li > div {
+  display: inline-block;
+}
+
+.items > li > div > div {
+  display: inline-block;
+}
 
 
 
