--- a/app/Resources/views/accountl1/index.html.twig
+++ b/app/Resources/views/accountl1/index.html.twig
@@ -8,6 +8,7 @@
             <tr>
                 <th>Código</th>
                 <th>Nombre</th>
+                <th>Vouchers</th>
                 <th></th>
             </tr>
         </thead>
@@ -16,13 +17,14 @@
             <tr>
                 <td>{{ accountL1.codeString }}-00-00</td>
                 <td>{{ accountL1.name }}</td>
+                <td></td>
                 <td>
                     <ul>
                         <li>
                             <a href="{{ path('accountl1_edit', { 'id': accountL1.id }) }}" class="btn btn-primary btn-xs">editar</a>
                         </li>
                         <li>
-                            <a href="{{ path('accountl2_new', { 'id': accountL1.id }) }}" class="btn btn-primary btn-xs">nueva cuenta N2</a>
+                            <a href="{{ path('accountl2_new', { 'id': accountL1.id }) }}" class="btn btn-primary btn-xs">agregar cuenta N2</a>
                         </li>
                     </ul>
                 </td><tr>
@@ -30,13 +32,14 @@
                 <tr>
                     <td>&nbsp;&nbsp;&nbsp;&nbsp;{{ accountL1.codeString }}-{{ accountL2.codeString }}-00</td>
                     <td>{{ accountL2.name }}</td>
+                    <td></td>
                     <td>
                         <ul>
                             <li>
                                 <a href="{{ path('accountl2_edit', { 'id': accountL2.id }) }}" class="btn btn-primary btn-xs">editar</a>
                             </li>
                             <li>
-                                <a href="{{ path('accountl3_new', { 'id': accountL2.id }) }}" class="btn btn-primary btn-xs">nueva cuenta N3</a>
+                                <a href="{{ path('accountl3_new', { 'id': accountL2.id }) }}" class="btn btn-primary btn-xs">agregar cuenta N3</a>
                             </li>
                         </ul>
                     </td>
@@ -45,13 +48,18 @@
                     <tr>
                         <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ accountL1.codeString }}-{{ accountL2.codeString }}-{{ accountL3.codeString }}</td>
                         <td>{{ accountL3.name }}</td>
+                        <td><ul>
+                            {% for voucher in accountL3.vouchers %}
+                                <li><a href="{{ path('voucher_edit', { 'id': voucher.id }) }}" class="btn btn-default btn-xs">{{voucher.number}}</a></li>
+                            {% endfor %}
+                        </ul></td>
                         <td>
                             <ul>
                                 <li>
                                     <a href="{{ path('accountl3_edit', { 'id': accountL3.id }) }}" class="btn btn-primary btn-xs">editar</a>
                                 </li>
                                 <li>
-                                    <a href="{{ path('voucher_new', { 'id': accountL3.id }) }}" class="btn btn-primary btn-xs">ingresar voucher</a>
+                                    <a href="{{ path('voucher_new', { 'id': accountL3.id }) }}" class="btn btn-success btn-xs">ingresar voucher</a>
                                 </li>
                             </ul>
                         </td>
