--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -66,6 +66,15 @@
                                     <li><a href="{{path('accountl1_new')}}">Nueva Cuenta Nivel 1</a></li>
                                 </ul>
                             </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                Reportes 
+                                <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="{{path('minor_book')}}">Libro Menor</a></li>
+                                    <li><a href="{{path('mayor_book')}}">Libro Mayor</a></li>
+                                </ul>
+                            </li>
                         {% endif %}
                     {% endif %}
                 </ul>
