comit para trabajar desde el otro pc

--- a/app/Resources/views/accountl3/show.html.twig
+++ b/app/Resources/views/accountl3/show.html.twig
@@ -1,20 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Accountl3</h1>
+    <h1>Cuenta nivel 3</h1>
 
-    <table>
+    <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ accountL3.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
+                <th>Nombre</th>
                 <td>{{ accountL3.name }}</td>
             </tr>
             <tr>
-                <th>Code</th>
+                <th>Código</th>
                 <td>{{ accountL3.code }}</td>
             </tr>
         </tbody>
