--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -90,7 +90,7 @@
                                 </ul>
                             </li>
                         {% else %}
-                            <li><a href="{{path('login_route')}}">Log in</a></li> / <li><a href="{{path('signUp_route')}}">Sing up</a></li>
+                            <li><a href="{{path('login_route')}}">Ingresar</a></li> 
                         {% endif %}
                     </li>
                 </ul>
