para cambio de pc

--- a/src/BooksBundle/Resources/views/Report/minor.html.twig
+++ b/src/BooksBundle/Resources/views/Report/minor.html.twig
@@ -1,7 +1,5 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}BooksBundle:Report:minor{% endblock %}
-
 {% block body %}
 <h1>Libro Menor</h1>
 
@@ -36,7 +34,14 @@
                         <td>{{ accountL3.name }}</td>
                         <td><ul>
                             {% for voucher in accountL3.vouchers %}
-                                <li><a href="{{ path('voucher_edit', { 'id': voucher.id }) }}" class="btn btn-default btn-xs">{{voucher.number}}</a></li>
+                                <li>
+                                    <a href="{{ path('voucher_edit', { 'id': voucher.id }) }}" class="btn btn-default btn-xs">{{voucher.number}}</a>
+                                    {% for item in voucher.items %}
+                                        <ul>
+                                            
+                                        </ul>
+                                    {% endfor %}
+                                </li>
                             {% endfor %}
                         </ul></td>
                     </tr>
