--- a/src/BooksBundle/Resources/views/Report/mayor.html.twig
+++ b/src/BooksBundle/Resources/views/Report/mayor.html.twig
@@ -1,7 +1,68 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}BooksBundle:Report:mayor{% endblock %}
-
 {% block body %}
-<h1>Libro Mayor</h1>
+<h1>Libro Menor</h1>
+
+	{{ form_start(searchForm) }}
+        {{ form_widget(searchForm) }}
+    {{ form_end(searchForm) }}
+
+    <table class="table table-stiped">
+        <thead>
+            <tr>
+                <th>Código</th>
+                <th>Nombre</th>
+                <th>Vouchers</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for accountL1 in accountL1s %}
+            <tr>
+                <td>{{ accountL1.codeString }}-00-00</td>
+                <td>{{ accountL1.name }}</td>
+                <td></td>
+            <tr>
+            {% for accountL2 in accountL1.accountsL2 %}
+                <tr>
+                    <td>&nbsp;&nbsp;&nbsp;&nbsp;{{ accountL1.codeString }}-{{ accountL2.codeString }}-00</td>
+                    <td>{{ accountL2.name }}</td>
+                    <td></td>
+                </tr>
+                {% for accountL3 in accountL2.accountsL3 %}
+                    <tr>
+                        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ accountL1.codeString }}-{{ accountL2.codeString }}-{{ accountL3.codeString }}</td>
+                        <td>{{ accountL3.name }}</td>
+                        <td><ul>
+                            {% for voucher in accountL3.vouchers %}
+                                <li>
+                                    <a href="{{ path('voucher_edit', { 'id': voucher.id }) }}" class="btn btn-default btn-xs">{{voucher.number}}</a>
+                                    -{{voucher.type}}
+                                    -{{voucher.date|date('d-m-Y')}}
+
+                                    <ul>
+                                        {% for item in voucher.items %}
+                                            <li>
+                                                {{ item.documentNumber }} - {{ item.credit }} - {{ item.debit }}
+                                            </li>
+                                        {% endfor %}
+                                    </ul>
+                                </li>
+                            {% endfor %}
+                        </ul></td>
+                    </tr>
+                {% endfor %}
+            {% endfor %}
+        {% endfor %}
+        </tbody>
+    </table>
+
 {% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2-rc.1/js/select2.min.js"></script>
+    <script src="{{ asset('js/itemCollection.js') }}"></script>
+        
+{% endblock %}
+
